# ChangeLog for app-emulation/qemu
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/qemu/ChangeLog,v 1.278 2014/08/05 08:24:32 vapier Exp $

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Add USE=numa to control numactl automagic dep.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  qemu-2.0.0-r1.ebuild, qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Add USE=lzo/snappy to control liblzo/snappy automagic deps.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  qemu-2.0.0-r1.ebuild, qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Add USE=nfs to control libnfs automagic dep.

  05 Aug 2014; Mike Frysinger <vapier@gentoo.org> metadata.xml,
  qemu-2.0.0-r1.ebuild, qemu-2.0.0.ebuild, qemu-2.1.0.ebuild, qemu-9999.ebuild:
  Control quorum via USE=tls since it also relies on gnutls.

  04 Aug 2014; Mike Frysinger <vapier@gentoo.org> files/qemu-binfmt.initd-r1:
  actually use the new $QEMU_BINFMT_FLAGS

*qemu-2.1.0 (04 Aug 2014)

  04 Aug 2014; Mike Frysinger <vapier@gentoo.org> +qemu-2.1.0.ebuild,
  files/qemu-binfmt.initd-r1:
  Version bump #518806 by José Romildo Malaquias.  Add aarch64 to the init
  script, and switch flags from P to OC until qemu itself can understand the
  extra argv[0] #512780 by Bertrand Jacquin.

  29 Jul 2014; Mike Frysinger <vapier@gentoo.org> qemu-2.0.0-r1.ebuild,
  qemu-9999.ebuild:
  Do not try to mung blobs when they are not installed.

  29 Jul 2014; Mike Frysinger <vapier@gentoo.org> qemu-2.0.0-r1.ebuild,
  qemu-9999.ebuild:
  Add USE=nls support #515544 by Nikoli.

  29 Jul 2014; Mike Frysinger <vapier@gentoo.org> qemu-2.0.0-r1.ebuild,
  qemu-9999.ebuild:
  Do not attempt to set fcaps on virtfs-proxy-helper when it does not exist
  #516874 by Joakim Tjernlund.

  29 Jul 2014; Mike Frysinger <vapier@gentoo.org> qemu-2.0.0-r1.ebuild,
  qemu-9999.ebuild: